Add two modules. Healthcheck and environment (Controller + UseCase). controller_handler now return a pr-econfigured application_config if needed.
