# setup.py
@@ -49,6 +49,13 @@ setup(
         "petisco/security/token_manager",
         "petisco/tools",
         "petisco/use_case",
+        "petisco/modules",
+        "petisco/modules/environment",
+        "petisco/modules/environment/application",
+        "petisco/modules/environment/domain",
+        "petisco/modules/healthcheck",
+        "petisco/modules/healthcheck/application",
+        "petisco/modules/healthcheck/domain",
     ],
     include_package_data=True,
     zip_safe=False,
